--- a/example/downstream/index.html
+++ b/example/downstream/index.html
@@ -1,7 +1,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>upstream</title>
+    <title>downstream</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
