--- a/example/downstream/index.html
+++ b/example/downstream/index.html
@@ -9,10 +9,18 @@
       <h1>downstream</h1>
       <div class="row">
         <form role="form">
-          <div class="col-xs-4">
+          <div class="col-xs-2">
+            <select name="codec-type" class="form-control">
+              <option value="">-codec-</option>
+              <option value="VP8">VP8</option>
+              <option value="VP9">VP9</option>
+              <option value="H264">H264</option>
+            </select>
+          </div>
+          <div class="col-xs-3">
             <input id="channel" type="text" class="form-control" placeholder="channelId" value="" />
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-3">
             <input id="token" type="text" class="form-control" placeholder="accessToken" value="" />
           </div>
           <button id="start" type="button" class="btn btn-default">start video</button>
