ファイル名を変更する

--- a/example/updown.html
+++ b/example/updown.html
@@ -7,13 +7,17 @@
         <div class="container">
             <h1>updown test</h1>
             <button id="start">start</button>
-            <div>
+            <br />
+            <div style="float:left;">
                 <h2>up</h2>
                 <video id="local-video" autoplay="" style="width: 400px; height: 275px; border: 1px solid black;"></video>
             </div>
-            <div>
-                <h2>down</h2>
+            <div style="float:left;">
+                <h2>down1</h2>
                 <video id="remote-video1" autoplay="" style="width: 400px; height: 275px; border: 1px solid black;"></video>
+            </div>
+            <div style="float:left;">
+                <h2>down2</h2>
                 <video id="remote-video2" autoplay="" style="width: 400px; height: 275px; border: 1px solid black;"></video>
             </div>
         </div>
