--- a/example/multistream.html
+++ b/example/multistream.html
@@ -6,111 +6,106 @@
     <body>
         <div class="container">
             <h1>multistream test</h1>
-            <button id="start">start</button>
-            <div>
-                <h2>local</h2>
-                <video id="local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+            <br />
+            <div style="float:left;">
+                <h2>up1</h2>
+                <button id="start-publisher1">start</button>
+                <button id="stop-publisher1">stop</button><br />
+                <video id="publisher1-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                <div id="publisher1-remote-videos"></div>
             </div>
-            <div id="remote">
-                <h2>remote</h2>
+            <div id="publisher2" style="float:left;">
+                <h2>up2</h2>
+                <button id="start-publisher2">start</button>
+                <button id="stop-publisher2">stop</button><br />
+                <video id="publisher2-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                <div id="publisher2-remote-videos"></div>
             </div>
         </div>
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-var RTCPeerConnection = window.RTCPeerConnection;
-var RTCSessionDescription = window.RTCSessionDescription;
-var peerConnection, clientId;
-var sora = new Sora("ws://127.0.0.1:5000/signaling");
-var channelId = "Sora";
-var upstreamToken = "";
+var channelId = 'Sora';
+var debug = false;
+var sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
+var metadata1 = 'ham';
+var metadata2 = 'spam';
+var options = {
+  multistream: true
+}
+var publisher1 = sora.publisher(channelId, metadata1, options);
+var publisher2 = sora.publisher(channelId, metadata1, options);
 
-document.querySelector("#start").addEventListener("click", function() {
-  multistream();
-});
-
-function multistream() {
-  var connection = sora.connection();
-  var offer, localStream;
-  navigator.mediaDevices.getUserMedia({video: true})
-    .then(stream => {
-      localStream = stream;
-      var params = {
-        role: "upstream",
-        channelId: channelId,
-        accessToken: upstreamToken,
-        multistream: true,
-      };
-      return connection.connect(params)
-    })
-    .then(message => {
-      offer = message;
-      return RTCPeerConnection.generateCertificate({ name: "ECDSA", namedCurve: "P-256" })
-    })
-    .then(certificate => {
-      peerConnection = new RTCPeerConnection(offer.config);
-      clientId = offer.client_id;
-      peerConnection.addStream(localStream);
-      peerConnection.onaddstream = function(event) {
-        if (clientId !== event.stream.id) {
-          var remoteVideos = document.getElementById("remote");
-          var remoteVideo = document.createElement('video');
-          remoteVideo.id = "remotevideo_" + event.stream.id;
-          remoteVideo.style.border = "1px solid red";
-          remoteVideo.controls = true;
-          remoteVideo.width="320";
-          remoteVideo.height="240";
-          remoteVideo.srcObject = event.stream;
-          remoteVideos.appendChild(remoteVideo);
-          remoteVideo.play();
-        }
-      }
-      peerConnection.onremovestream = function(event) {
-          var remoteVideos = document.getElementById("remote");
-          var remoteVideo = document.getElementById('remotevideo_' + event.stream.id);
-          remoteVideos.removeChild(remoteVideo);
-      }
-
-      return peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
-    })
-    .then(() => {
-      return peerConnection.createAnswer({});
-    })
-    .then(sessionDescription => {
-      return peerConnection.setLocalDescription(sessionDescription);
-    })
-    .then(() => {
-      connection.answer(peerConnection.localDescription.sdp);
-      peerConnection.onicecandidate = function(event) {
-        if (event.candidate !== null) {
-          connection.candidate(event.candidate);
-        }
-      };
-      document.querySelector("#local-video").srcObject = localStream;
-      return Promise.resolve();
+document.querySelector('#start-publisher1').addEventListener('click', function() {
+  // publisher1
+  navigator.mediaDevices.getUserMedia({audio: true, video: true})
+    .then(mediaStream => {
+      publisher1.connect(mediaStream)
+        .then(stream => {
+          document.querySelector('#publisher1-local-video').srcObject = stream;
+        });
     })
     .catch(e => {
       console.error(e);
     });
-
-  connection.on("update", function(message) {
-    var sessionDescription = new RTCSessionDescription({type: "offer", sdp: message.sdp});
-    peerConnection.setRemoteDescription(sessionDescription)
-      .then(() => {
-        return peerConnection.createAnswer();
-      })
-      .then(sessionDescription => {
-        return peerConnection.setLocalDescription(sessionDescription);
-      })
-      .then(() => {
-        connection.answer(peerConnection.localDescription.sdp);
-        return Promise.resolve();
-      })
-      .catch(e => {
-        console.error(e);
-      });
+  publisher1.on('addstream', function(event) {
+    var remoteVideos = document.querySelector('#publisher1-remote-videos');
+    var remoteVideo = document.createElement('video');
+    remoteVideo.id = "publisher1-remotevideo-" + event.stream.id;
+    remoteVideo.style.border = '1px solid red';
+    remoteVideo.autoplay = true;
+    remoteVideo.width = '160';
+    remoteVideo.height="120";
+    remoteVideo.srcObject = event.stream;
+    remoteVideos.appendChild(remoteVideo);
   });
-}
+  publisher1.on('removestream', function(event) {
+    var remoteVideo = document.querySelector('#publisher1-remotevideo-' + event.stream.id);
+    document.querySelector('#publisher1-remote-videos').removeChild(remoteVideo);
+  });
+});
+document.querySelector('#start-publisher2').addEventListener('click', function() {
+  // publisher2
+  navigator.mediaDevices.getUserMedia({audio: true, video: true})
+    .then(mediaStream => {
+      publisher2.connect(mediaStream)
+        .then(stream => {
+          document.querySelector('#publisher2-local-video').srcObject = stream;
+        });
+    })
+    .catch(e => {
+      console.error(e);
+    });
+  publisher2.on('addstream', function(event) {
+    var remoteVideos = document.querySelector('#publisher2-remote-videos');
+    var remoteVideo = document.createElement('video');
+    remoteVideo.id = 'publisher2-remotevideo-' + event.stream.id;
+    remoteVideo.style.border = '1px solid red';
+    remoteVideo.autoplay = true;
+    remoteVideo.width = '160';
+    remoteVideo.height="120";
+    remoteVideo.srcObject = event.stream;
+    remoteVideos.appendChild(remoteVideo);
+  });
+  publisher2.on('removestream', function(event) {
+    var remoteVideo = document.querySelector('#publisher2-remotevideo-' + event.stream.id);
+    document.querySelector('#publisher2-remote-videos').removeChild(remoteVideo);
+  });
+});
+document.querySelector('#stop-publisher1').addEventListener('click', function() {
+  publisher1.disconnect()
+    .then(function() {
+      document.querySelector('#publisher1-local-video').srcObject = null;
+      document.querySelector('#publisher1-remote-videos').innerHTML = null;
+    });
+});
+document.querySelector('#stop-publisher2').addEventListener('click', function() {
+  publisher2.disconnect()
+    .then(function() {
+      document.querySelector('#publisher2-local-video').srcObject = null;
+      document.querySelector('#publisher2-remote-videos').innerHTML = null;
+    });
+});
     </script>
   </body>
 </html>
